--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -e html,js,css /Users/jason/Documents/Immersive/wikistack/app.js"
+    //"start": "nodemon -e html,js,css /Users/Jason/Documents/Immersive/wikistack/app.js"
   },
   "repository": {
     "type": "git",
